--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/composition-api": "^1.7.1",
     "core-js": "^3.6.5",
     "danfojs": "^0.1.2",
+    "docx": "^7.8.0",
+    "jszip": "^3.10.1",
     "vue": "^2.6.11",
+    "vue-signature": "^2.5.6",
     "vuetify": "^2.2.11",
     "xlsx": "^0.16.9"
   },
